// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions chats addChat() should add chat with notifications 1`] = `
Array [
  Object {
    "ticket": Object {
      "customer": Object {
        "name": "Mark Frizeli",
      },
      "id": 1,
      "last_message_body_text": "Hi",
    },
    "type": "ADD_CHAT",
  },
]
`;

exports[`actions chats addChat() should add chat without notifications 1`] = `
Array [
  Object {
    "ticket": Object {
      "customer": Object {
        "name": "Mark Frizeli",
      },
      "id": 1,
      "last_message_body_text": "Hi",
    },
    "type": "ADD_CHAT",
  },
]
`;

exports[`actions chats fetchChats() should fetch chats 1`] = `
Array [
  Object {
    "tickets": Array [
      Object {
        "id": 123,
      },
      Object {
        "id": 2,
      },
    ],
    "type": "SET_CHATS",
  },
]
`;

exports[`actions chats markChatAsRead() should mark chat as read 1`] = `
Object {
  "ticketId": 12,
  "type": "MARK_CHAT_AS_READ",
}
`;

exports[`actions chats removeChat() should remove chat 1`] = `
Object {
  "ticketId": 12,
  "type": "REMOVE_CHAT",
}
`;

exports[`actions chats setChats() should add chats with notifications 1`] = `
Array [
  Object {
    "tickets": Array [
      Object {
        "customer": Object {
          "name": "Mark Frizeli",
        },
        "id": 1,
        "last_message_body_text": "Hi",
      },
    ],
    "type": "SET_CHATS",
  },
]
`;

exports[`actions chats setChats() should add chats with notifications 2`] = `Array []`;
